chore: Action 명칭 변경

--- a/.github/workflows/cd-ecr.yml
+++ b/.github/workflows/cd-ecr.yml
@@ -1,4 +1,4 @@
-name: CD
+name: CD [ECR-ECS]
 
 on:
   push:
@@ -37,7 +37,8 @@ jobs:
   deploy:
     needs: ci-and-build
     if: needs.ci-and-build.outputs.environment != 'test'
-    runs-on: ubuntu-latest
+    #    runs-on: ubuntu-latest
+    runs-on: [ self-hosted, cd-runner ]
     environment: ${{ needs.ci-and-build.outputs.environment }}
 
     env:
