--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,9 @@ jobs:
   # Job 1: 빌드 및 테스트 (한 번만 실행)
   build-and-test:
     name: Build & Run Tests
-    runs-on: [ self-hosted, ci-runner ]
+    #    runs-on: [ self-hosted, ci-runner ]
     # self-hosted 러너가 .. Dockerhub에서 IP 밴을 당한 것 같아서 ARM 환경의 GH hosted runner로 변경합니다.
-    #    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       checks: write
