feat: spring profile별로 로깅을 구분 및 local을 제외한 환경에서 콘솔 로깅 시 색상 코드를 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -266,7 +266,7 @@ storage:
       private-key: ${CDN_PRIVATE_KEY}
 
 sentry:
-  dsn: ${SENTRY_DSN}
+  dsn: ${SENTRY_DSN:-}
   environment: ${spring.profiles.active}
   exception-resolver-order: -2147483647
   max-request-body-size: none
