--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -230,9 +230,23 @@ management:
 app:
   base-url: ${APP_BASE_URL:http://localhost:${SERVER_PORT:8080}}
   firebase-configuration: ${FIREBASE_CONFIGURATION}
+
+  webhook:
+    buffer:
+      enabled: ${WEBHOOK_BUFFER_ENABLED:true}
+      flush-interval-ms: ${WEBHOOK_BUFFER_FLUSH_INTERVAL_MS:60000} # 1분마다 버퍼 플러시
+    telegram:
+      bot-token: ${TELEGRAM_BOT_TOKEN}
+      chat-id: ${TELEGRAM_CHAT_ID}
+    slack:
+      url: ${SLACK_WEBHOOK_URL:-}
+    discord:
+      url: ${DISCORD_WEBHOOK_URL:-}
+
   swagger-auth:
     username: ${SWAGGER_AUTH_USERNAME:username}
     password: ${SWAGGER_AUTH_PASSWORD:password}
+
   oauth2:
     apple:
       client-id: ${APPLE_CLIENT_ID}
