[Feat] Discord/Slack/Telegram을 통한 WebHook 알람 발송 기능 추가 (#529)
* feat: spring profile별로 로깅을 구분 및 local을 제외한 환경에서 콘솔 로깅 시 색상 코드를 제거

* chore: dev 실행 시 command line 길이가 OS 제한을 초과해서 발생하는 문제 해결

* chore: 테스트용 컨트롤러 API 정리

* chore: refactor 이슈 템플릿 복원

* feat: webhook 도메인 추가 및 에러 코드 생성

* feat: webhook port out 및 adapter 구현

* feat: 일반 및 버퍼를 통한 알람 전송 기능 구현

* feat: 웹훅 알람을 보내는 기능을 AOP로 구현

* feat: 발송할 웹훅 플랫폼 기본값을 설정 및 AOP 코드 개선

* chore: env 파일을 이용하도록 변경

* feat: 회원가입 및 챌린저 기록 생성 시 알람을 전송하도록 구현

* feat: 챌린저 코드 생성 시 검증 강화

* feat: 웹훅 알람 테스트용 API 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,10 +19,10 @@ server:
 
 spring:
   application:
-    name: x-umc-product
+    name: ${SPRING_APPLICATION_NAME:-x-umc-product}
   profiles:
     # 기본적으로 local 프로필을 활성화, 실수로 prod에 접근하는 것을 방지함
-    active: local
+    active: ${SPRING_PROFILES_ACTIVE:-local}
 
   docker:
     compose:
@@ -230,9 +230,23 @@ management:
 app:
   base-url: ${APP_BASE_URL:http://localhost:${SERVER_PORT:8080}}
   firebase-configuration: ${FIREBASE_CONFIGURATION}
+
+  webhook:
+    buffer:
+      enabled: ${WEBHOOK_BUFFER_ENABLED:true}
+      flush-interval-ms: ${WEBHOOK_BUFFER_FLUSH_INTERVAL_MS:60000} # 1분마다 버퍼 플러시
+    telegram:
+      bot-token: ${TELEGRAM_BOT_TOKEN:-}
+      chat-id: ${TELEGRAM_CHAT_ID:-}
+    slack:
+      url: ${SLACK_WEBHOOK_URL:-}
+    discord:
+      url: ${DISCORD_WEBHOOK_URL:-}
+
   swagger-auth:
     username: ${SWAGGER_AUTH_USERNAME:username}
     password: ${SWAGGER_AUTH_PASSWORD:password}
+
   oauth2:
     apple:
       client-id: ${APPLE_CLIENT_ID}
@@ -266,7 +280,7 @@ storage:
       private-key: ${CDN_PRIVATE_KEY}
 
 sentry:
-  dsn: ${SENTRY_DSN}
+  dsn: ${SENTRY_DSN:-}
   environment: ${spring.profiles.active}
   exception-resolver-order: -2147483647
   max-request-body-size: none
